# machine_learning

./: .gitignore  AEVB.py  AEVBExample.py  ArchetypalAnalysis.py  ArchetypeExample.py  ExtractFeaturesInception.py
notebooks/: ArchetypalAnalysis.ipynb  FizzBuzz.ipynb  ImshowBokeh.html  ImshowBokeh.ipynb  Latex.ipynb  RegressionDataReduction.ipynb  Widget List.ipynb  WidgetTest.ipynb  abstract_syntax_trees.ipynb  archetypal_analysis.ipynb  deblurring.ipynb  deblurring_autograd.ipynb  deblurring_tensorflow.ipynb  deconvolve.ipynb  digits_inverse_problem.ipynb  digits_inverse_problem_tensorflow.ipynb  fizz_buzz.ipynb  git_hub_crawler.ipynb  latex.ipynb  loss_net.ipynb  notebook_style.css  pytest_plugin.ipynb  readme.md  simple_inverse_problem.ipynb  simple_inverse_training.ipynb  training_inverse_problem.ipynb  upload_info.txt
src/: ArchetypalAnalysis.py  aevb_example.py  archetype_example.py  git_hub_crawler.py
src/deconvolution/: deconvolution.py
src/function_estimation/: FunctionCreation.py  function_trainer.py  incremental_function_trainer.py
src/loss_net/: blind_deconvolution.py  loss_net.py
src/pythonic_ros/: CMakeLists.txt  package.xml
src/pythonic_ros/scripts/: example1_listener.py  example1_publisher.py  pytopic.py
templates/: __init__.py  test_special_add.py
templates/latex/: figure.tex  hello_world.tex  table.csv  table.tex
